Sugati/src/objects/Airport_Terminal__c.object
<CustomObject>
    <fields>
        <fullName>AT_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Airport_Terminals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AT_Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AT_Class__c</fullName>
        <label>Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Airport Terminal &amp; Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>AT_Carrier_Name__c</columns>
        <columns>AT_Airport__c</columns>
        <columns>AT_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Terminal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airport Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>